# umgmt

./: CMakeLists.txt  CompileOptions.cmake  Doxyfile  LICENSE  README.md
src/: umgmt.h
src/umgmt/: db.c  db.h  dyn_buffer.c  dyn_buffer.h  group.c  group.h  password.c  password.h  types.h  user.c  user.h  user_db.c  user_db.h
test/: Tests.cmake  common.c  common.h  test_db.c  test_dyn_buffer.c  test_group.c  test_lib.c  test_password.c  test_user.c
